# yadif-cuda

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  README.md  bmcapture.cpp  bmcapture.h  capture_delegate.cpp  capture_delegate.h  cmd.sh  main.cpp  yadif.cpp  yadif.h  yadif_cuda.cu
ffmpeg/: vf_yadif_cuda.c  vf_yadif_cuda.cu  yadif.h
